solve sidebar overflow issue

--- a/src/app/dashboard/page.module.css
+++ b/src/app/dashboard/page.module.css
@@ -5,6 +5,7 @@
 
 .homeContainer {
     flex: 6;
+    overflow-y: auto;
 }
 
 .widgets, 
