--- a/src/components/sidebar/sidebar.module.css
+++ b/src/components/sidebar/sidebar.module.css
@@ -1,8 +1,10 @@
 .sidebar {
     flex: 1;
     border-right: 0.5px solid rgb(231, 278, 278);
+    height: 100%;
     min-height: 100vh;
     background-color: #fff;
+    overflow-y: auto;
 }
 
 .top {
